# Digithon

./: .env.example  .gitignore  AGENTS.md  CALENDAR_EVENTS_IMPLEMENTATION_PLAN.md  CALENDAR_EVENTS_WORK_SUMMARY.md  DOCKER_STACK_PROGRESS.md  Dockerfile.api  Dockerfile.openworkflow  Dockerfile.web  Dockerfile.worker  HACKATHON_EXECUTION_PLAN.md  IMPLEMENTATION_TASKS.md  Implementation_Plan_v2.md  MVP_WORK_SPLIT.md  PREDICTION_ENGINE_IMPLEMENTATION_PLAN.md  README.md  architecture-current.md  docker-compose.yml  openworkflow.config.ts  package-lock.json  package.json  pyproject.toml  start-local.sh
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: db.py  main.py  routes.py  schemas.py
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  main.tsx  queries.ts  store.ts  styles.css
apps/web/src/components/: AnalyticsPanels.tsx  (+11 more)
apps/worker/: README.md  package.json  tsconfig.json
apps/worker/src/: db.ts  events.ts  index.ts  ingestSteps.ts  normalizer.ts  openworkflowClient.ts  scheduler.ts
db/: migrate.sh
db/migrations/: 001_init.sql  002_add_ingest_workflow_id.sql  003_calendar_events.sql  004_more_calendar_events.sql  005_inventory_predictions.sql
db/seed/: messy_sales.csv
digithon/: __init__.py
openworkflow/: ingest.ts  placeholder.ts
worker_tasks/: 00_START_HERE.md  01_prereqs.md  02_skeleton.md  03_db_connect.md  04_seed_a_run.md  05_claim_run.md  06_events.md  07_normalizer_call.md  08_store_raw.md  09_store_normalized.md  10_full_workflow.md  11_crash_resume.md  12_handoff.md
(+1 files in other folders)
